[gd_scene load_steps=13 format=2]

[ext_resource path="res://GameParts/Player/PlayerGhost.gd" type="Script" id=1]
[ext_resource path="res://Resources/Artwork/Effects/effect9.png" type="Texture" id=2]
[ext_resource path="res://Resources/Particles/smoke4.png" type="Texture" id=3]
[ext_resource path="res://Resources/Particles/orb2.png" type="Texture" id=4]
[ext_resource path="res://Resources/Particles/smoke1.png" type="Texture" id=5]

[sub_resource type="Animation" id=3]
resource_name = "Start"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("SpawnAnimation:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpawnAnimation:amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("SpawnAnimation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Trail:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Head:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.33409, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.344371, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="CircleShape2D" id=6]
radius = 19.3323

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.4912 ), 0.0, 0.0, 0, 0, Vector2( 0.202507, 1 ), 1.23162, 1.23162, 0, 0, Vector2( 1, 0.3416 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.423841, 0.907285 )
colors = PoolColorArray( 1, 1, 1, 1, 0.87451, 0.87451, 0.87451, 1, 0.211765, 0.211765, 0.211765, 0 )

[sub_resource type="CircleShape2D" id=7]
radius = 24.3708

[node name="Player" type="RigidBody2D"]
position = Vector2( 230.384, 140.07 )
mass = 5.0
gravity_scale = 0.0
linear_damp = 0.5
script = ExtResource( 1 )

[node name="Spawn" type="AnimationPlayer" parent="."]
autoplay = "Start"
anims/Start = SubResource( 3 )

[node name="SpawnAnimation" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
lifetime = 4.0
speed_scale = 2.0
explosiveness = 0.96
randomness = 0.24
local_coords = false
texture = ExtResource( 2 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 120.0
angular_velocity = 108.39
angular_velocity_random = 0.32
radial_accel = -6.45
damping = 19.36
angle = 120.0
angle_random = 1.0
scale_amount_random = 0.38
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Trail" type="CPUParticles2D" parent="."]
modulate = Color( 1, 1, 1, 0.392274 )
amount = 45
lifetime = 2.0
speed_scale = 2.0
local_coords = false
draw_order = 1
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 10.63
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 12.0
linear_accel = -21.51
angle = 720.0
angle_random = 1.0
scale_amount = 0.2
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="Joint" type="PinJoint2D" parent="."]
node_a = NodePath("..")
node_b = NodePath("../Head")
bias = 0.114
softness = 1.2

[node name="Head" type="RigidBody2D" parent="."]
input_pickable = true
mass = 10.0
gravity_scale = 0.0
linear_damp = 3.0

[node name="orb3" type="Sprite" parent="Head"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 7 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 5 )
texture_scale = 1.6
color = Color( 0.282353, 1, 0.847059, 1 )
energy = 0.45
[connection signal="mouse_entered" from="Head" to="." method="_on_Head_mouse_entered"]
[connection signal="mouse_exited" from="Head" to="." method="_on_Head_mouse_exited"]
